--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <script src="build/bundle.min.js" ></script>
-    <title>Minimal React Starter Kit</title>
+    <title>Nameless Comic</title>
   </head>
   <body>
     <div id="mount"></div>
