--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="icon" type="image/png" href="images/favicon.png" />
-    <script src="build/bundle.min.js" ></script>
-    <title>Nameless Comic</title>
-  </head>
-  <body>
-    <div id="mount"></div>
-  </body>
-</html>
+<html><head><link rel="stylesheet" href="main.css"/><link rel="icon" type="image/png" href="images/favicon.png"/><script src="bundle.min.js"></script><title>Hand Turkeys || Nameless Comic</title><script defer="defer" src="bundle.min.js"></script></head><body><div class="container" id="mount"><div class="header"><a href="1" class="">« First </a><a href="32" class="">← Previous </a><a href="14">Random </a><a href="34" class="disabled">Next → </a><a href="33" class="disabled">Last »</a></div><img src="images/comics/33.jpg" alt="Happy%20Thanksgiving!" title="Happy%20Thanksgiving!"/></div></body></html>
